--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   <title>Introduction to the DOM Lab</title>
 </head>
 <body>
-  <!--All our work for this lesson will go here-->
-  <h1>My HTML Adventure</h1>
+  <h1>My HTML adventure</h1>
   <p>
-    We're writing HYML markup to display in our <strong>browser</strong>.
-    We're basically telling computers what to do.<em>Neat!</em>
-    We're writing <a href="https://developer.mozilla.org/en-US-docs/Web/HTML">HYML</a> markup to display in our <strong>browers</strong>.
+    We're writing HTML markup to display in our <strong>browser</strong>.
+    We're basically telling computers what to do. <em>Neat!</em>
+    We're writing <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> markup to display in our <strong>browser</strong>.
   </p>
-    <table>
+  <table>
     <thead>
       <tr>
         <th>Element name</th>
